# OffGridComm

./: Cargo.toml  Dockerfile  LICENSE  README  docker-compose.yml  supervisord.conf
src/: lib.rs  main.rs
src/auth/: callsign.rs  mod.rs  password.rs  session.rs
src/config/: mod.rs  settings.rs
src/database/: migrations.rs  mod.rs  models.rs  queries.rs
src/messaging/: direct.rs  groups.rs  mod.rs  storage.rs
src/network/: mod.rs
src/terminal/: notifications.rs
src/utils/: mod.rs
